xerces for server initializer
git-svn-id: https://svn.jfire.org/svn/main/trunk/JFireIntegrationJBoss@7076 18c61ebf-f106-0410-9e1e-81fb82415b8f

--- a/.classpath
+++ b/.classpath
@@ -11,5 +11,6 @@
 	<classpathentry kind="var" path="WORKSPACE/NightLabsBase/dist/NightLabsBase.jar" sourcepath="/WORKSPACE/NightLabsBase/src"/>
 	<classpathentry kind="var" path="JBOSS/server/default/lib/jnpserver.jar"/>
 	<classpathentry kind="var" path="JBOSS/client/jbossall-client.jar"/>
+	<classpathentry kind="var" path="XERCES"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
