- Fixed package name
git-svn-id: https://svn.jfire.org/svn/main/trunk/org.nightlabs.jfire.base@7089 18c61ebf-f106-0410-9e1e-81fb82415b8f

--- a/plugin.xml
+++ b/plugin.xml
@@ -244,7 +244,7 @@
 	
   <extension
         point="org.nightlabs.base.cache">
-     <cacheFactory class="org.nightlabs.jdo.cache.CacheFactory"/>
+     <cacheFactory class="org.nightlabs.jfire.base.jdo.cache.CacheFactory"/>
   </extension>
 
 	
