--- a/.classpath
+++ b/.classpath
@@ -2,7 +2,7 @@
 <classpath>
 	<classpathentry path="src" kind="src"/>
 	<classpathentry path="ejbsrc" kind="src"/>
-	<classpathentry path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jdk1.6.0_01" kind="con"/>
+	<classpathentry path="org.eclipse.jdt.launching.JRE_CONTAINER" kind="con"/>
 	<classpathentry path="/JFireServerManager" combineaccessrules="false" kind="src"/>
 	<classpathentry path="JDK_TOOLS" kind="var"/>
 	<classpathentry path="JBOSS/bin/run.jar" kind="var"/>
@@ -34,5 +34,7 @@
 	<classpathentry path="WORKSPACE/JFireReportingTrade/dist/JFireReportingTrade.jar" kind="var"/>
 	<classpathentry sourcepath="dist/lib/junit-4.3.1-src.jar" path="dist/lib/junit-4.3.1.jar" kind="lib"/>
 	<classpathentry path="JBOSS/server/default/lib/mail.jar" kind="var"/>
+	<classpathentry sourcepath="/WORKSPACE/JFireBaseClientLib/src" path="WORKSPACE/JFireBaseClientLib/dist/JFireBaseClientLib.jar" kind="var"/>
+	<classpathentry path="JBOSS/server/default/lib/activation.jar" kind="var"/>
 	<classpathentry path="bin" kind="output"/>
 </classpath>
