made overview perspective fixed to avoid closing of overview view
git-svn-id: https://svn.jfire.org/svn/main/trunk/org.nightlabs.jfire.base@7554 18c61ebf-f106-0410-9e1e-81fb82415b8f

--- a/plugin.xml
+++ b/plugin.xml
@@ -105,6 +105,7 @@
 
       <perspective
             class="org.nightlabs.jfire.base.overview.OverviewPerspective"
+            fixed="true"
             icon="icons/overview/overview.16x16.png"
             id="org.nightlabs.jfire.base.overview.OverviewPerspective"
             name="%perspectives.overview.name">
