--- a/.classpath
+++ b/.classpath
@@ -1,40 +1,40 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry path="src" kind="src"/>
-	<classpathentry path="ejbsrc" kind="src"/>
-	<classpathentry path="org.eclipse.jdt.launching.JRE_CONTAINER" kind="con"/>
-	<classpathentry path="/JFireServerManager" combineaccessrules="false" kind="src"/>
-	<classpathentry path="JDK_TOOLS" kind="var"/>
-	<classpathentry path="JBOSS/bin/run.jar" kind="var"/>
-	<classpathentry path="JBOSS/bin/shutdown.jar" kind="var"/>
-	<classpathentry path="JBOSS/client/jboss-j2ee.jar" kind="var"/>
-	<classpathentry path="JBOSS/lib/concurrent.jar" kind="var"/>
-	<classpathentry path="JBOSS/lib/jboss-system.jar" kind="var"/>
-	<classpathentry path="JBOSS/lib/jboss-jmx.jar" kind="var"/>
-	<classpathentry path="JBOSS/server/default/lib/bcel.jar" kind="var"/>
-	<classpathentry sourcepath="/JBOSS_SRC" path="JBOSS/server/default/lib/jboss.jar" kind="var"/>
-	<classpathentry path="JBOSS/server/default/lib/jboss-transaction.jar" kind="var"/>
-	<classpathentry path="JBOSS/server/default/lib/jnpserver.jar" kind="var"/>
-	<classpathentry path="JBOSS/server/default/lib/jpl-pattern.jar" kind="var"/>
-	<classpathentry path="JBOSS/server/default/lib/jpl-util.jar" kind="var"/>
-	<classpathentry sourcepath="JBOSS_SRC/security/src/main" path="JBOSS/server/default/lib/jbosssx.jar" kind="var"/>
-	<classpathentry sourcepath="/WORKSPACE/JFireBase/src" path="WORKSPACE/JFireBase/dist/JFireBase.jar" kind="var"/>
-	<classpathentry sourcepath="/WORKSPACE/JFireBaseBean/src" path="WORKSPACE/JFireBaseBean/dist/JFireBaseBean.jar" kind="var"/>
-	<classpathentry sourcepath="/WORKSPACE/NightLabsBase/src" path="WORKSPACE/NightLabsBase/dist/NightLabsBase.jar" kind="var"/>
-	<classpathentry path="LOG4J" kind="var"/>
-	<classpathentry sourcepath="WORKSPACE/NightLabsJDO/src" path="WORKSPACE/NightLabsJDO/dist/NightLabsJDO.jar" kind="var"/>
-	<classpathentry sourcepath="/WORKSPACE/JFireTrade" path="WORKSPACE/JFireTrade/dist/JFireTrade.jar" kind="var"/>
-	<classpathentry sourcepath="/WORKSPACE/JFireSimpleTrade/src" path="WORKSPACE/JFireSimpleTrade/dist/JFireSimpleTrade.jar" kind="var"/>
-	<classpathentry sourcepath="JPOX_SRC" path="JDO2" kind="var"/>
-	<classpathentry path="WORKSPACE/JFireJbpm/dist/JFireJbpm.jar" kind="var"/>
-	<classpathentry path="WORKSPACE/JFireJbpm/lib/jbpm/jbpm-3.1.2.jar" kind="var"/>
-	<classpathentry path="WORKSPACE/JFireDynamicTrade/dist/JFireDynamicTrade.jar" kind="var"/>
-	<classpathentry sourcepath="/WORKSPACE/JFireVoucher/src" path="WORKSPACE/JFireVoucher/dist/JFireVoucher.jar" kind="var"/>
-	<classpathentry sourcepath="/WORKSPACE/JFireReporting" path="WORKSPACE/JFireReporting/dist/JFireReporting.jar" kind="var"/>
-	<classpathentry path="WORKSPACE/JFireReportingTrade/dist/JFireReportingTrade.jar" kind="var"/>
-	<classpathentry sourcepath="dist/lib/junit-4.3.1-src.jar" path="dist/lib/junit-4.3.1.jar" kind="lib"/>
-	<classpathentry path="JBOSS/server/default/lib/mail.jar" kind="var"/>
-	<classpathentry sourcepath="/WORKSPACE/JFireBaseClientLib/src" path="WORKSPACE/JFireBaseClientLib/dist/JFireBaseClientLib.jar" kind="var"/>
-	<classpathentry path="JBOSS/server/default/lib/activation.jar" kind="var"/>
-	<classpathentry path="bin" kind="output"/>
+	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="src" path="ejbsrc"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/JFireServerManager"/>
+	<classpathentry kind="var" path="JDK_TOOLS"/>
+	<classpathentry kind="var" path="JBOSS/bin/run.jar"/>
+	<classpathentry kind="var" path="JBOSS/bin/shutdown.jar"/>
+	<classpathentry kind="var" path="JBOSS/client/jboss-j2ee.jar"/>
+	<classpathentry kind="var" path="JBOSS/lib/concurrent.jar"/>
+	<classpathentry kind="var" path="JBOSS/lib/jboss-system.jar"/>
+	<classpathentry kind="var" path="JBOSS/lib/jboss-jmx.jar"/>
+	<classpathentry kind="var" path="JBOSS/server/default/lib/bcel.jar"/>
+	<classpathentry kind="var" path="JBOSS/server/default/lib/jboss.jar" sourcepath="/JBOSS_SRC"/>
+	<classpathentry kind="var" path="JBOSS/server/default/lib/jboss-transaction.jar"/>
+	<classpathentry kind="var" path="JBOSS/server/default/lib/jnpserver.jar"/>
+	<classpathentry kind="var" path="JBOSS/server/default/lib/jpl-pattern.jar"/>
+	<classpathentry kind="var" path="JBOSS/server/default/lib/jpl-util.jar"/>
+	<classpathentry kind="var" path="JBOSS/server/default/lib/jbosssx.jar" sourcepath="JBOSS_SRC/security/src/main"/>
+	<classpathentry kind="var" path="WORKSPACE/JFireBase/dist/JFireBase.jar" sourcepath="/WORKSPACE/JFireBase/src"/>
+	<classpathentry kind="var" path="WORKSPACE/JFireBaseBean/dist/JFireBaseBean.jar" sourcepath="/WORKSPACE/JFireBaseBean/src"/>
+	<classpathentry kind="var" path="WORKSPACE/NightLabsBase/dist/NightLabsBase.jar" sourcepath="/WORKSPACE/NightLabsBase/src"/>
+	<classpathentry kind="var" path="LOG4J"/>
+	<classpathentry kind="var" path="WORKSPACE/NightLabsJDO/dist/NightLabsJDO.jar" sourcepath="WORKSPACE/NightLabsJDO/src"/>
+	<classpathentry kind="var" path="WORKSPACE/JFireTrade/dist/JFireTrade.jar" sourcepath="/WORKSPACE/JFireTrade"/>
+	<classpathentry kind="var" path="WORKSPACE/JFireSimpleTrade/dist/JFireSimpleTrade.jar" sourcepath="/WORKSPACE/JFireSimpleTrade/src"/>
+	<classpathentry kind="var" path="JDO2" sourcepath="JPOX_SRC"/>
+	<classpathentry kind="var" path="WORKSPACE/JFireJbpm/dist/JFireJbpm.jar"/>
+	<classpathentry kind="var" path="WORKSPACE/JFireJbpm/lib/jbpm/jbpm-3.1.4.jar"/>
+	<classpathentry kind="var" path="WORKSPACE/JFireDynamicTrade/dist/JFireDynamicTrade.jar"/>
+	<classpathentry kind="var" path="WORKSPACE/JFireVoucher/dist/JFireVoucher.jar" sourcepath="/WORKSPACE/JFireVoucher/src"/>
+	<classpathentry kind="var" path="WORKSPACE/JFireReporting/dist/JFireReporting.jar" sourcepath="/WORKSPACE/JFireReporting"/>
+	<classpathentry kind="var" path="WORKSPACE/JFireReportingTrade/dist/JFireReportingTrade.jar"/>
+	<classpathentry kind="lib" path="dist/lib/junit-4.3.1.jar" sourcepath="dist/lib/junit-4.3.1-src.jar"/>
+	<classpathentry kind="var" path="JBOSS/server/default/lib/mail.jar"/>
+	<classpathentry kind="var" path="WORKSPACE/JFireBaseClientLib/dist/JFireBaseClientLib.jar" sourcepath="/WORKSPACE/JFireBaseClientLib/src"/>
+	<classpathentry kind="var" path="JBOSS/server/default/lib/activation.jar"/>
+	<classpathentry kind="output" path="bin"/>
 </classpath>
