adopted build.properties
git-svn-id: https://svn.jfire.org/svn/main/trunk/org.nightlabs.jfire.base@7631 18c61ebf-f106-0410-9e1e-81fb82415b8f

--- a/build.properties
+++ b/build.properties
@@ -10,7 +10,8 @@ bin.includes = plugin.xml,\
                META-INF/,\
                plugin_de_DE.properties,\
                lib/,\
-               plugin_customization.ini
+               plugin_customization.ini,\
+               plugin_de.properties
 src.includes = src/,\
                splash.bmp,\
                schema/,\
@@ -25,5 +26,8 @@ src.includes = src/,\
                LICENSE.txt,\
                .project,\
                .classpath,\
-               plugin_de_DE.properties
+               plugin_de_DE.properties,\
+               plugin_de.properties,\
+               plugin_customization.ini,\
+               build-nightlabs-compile.pre.xml
 jars.compile.order = org.nightlabs.jfire.base.jar
