--- a/.classpath
+++ b/.classpath
@@ -1,16 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="var" path="JBOSS/lib/jboss-system.jar"/>
-	<classpathentry kind="var" path="JBOSS/server/default/lib/jboss.jar" sourcepath="/JBOSS_SRC"/>
-	<classpathentry kind="var" path="JBOSS/server/default/lib/jbosssx.jar" sourcepath="JBOSS_SRC/security/src/main"/>
-	<classpathentry kind="var" path="LOG4J" sourcepath="/LOG4J_SRC"/>
-	<classpathentry kind="var" path="WORKSPACE/JFireServerManager/dist/JFireServerManager.jar" sourcepath="/WORKSPACE/JFireServerManager/src"/>
-	<classpathentry kind="var" path="WORKSPACE/JFireBase/dist/JFireBase.jar" sourcepath="WORKSPACE/JFireBase/src"/>
-	<classpathentry kind="var" path="WORKSPACE/NightLabsBase/dist/NightLabsBase.jar" sourcepath="/WORKSPACE/NightLabsBase/src"/>
-	<classpathentry kind="var" path="JBOSS/server/default/lib/jnpserver.jar"/>
-	<classpathentry kind="var" path="JBOSS/client/jbossall-client.jar"/>
-	<classpathentry kind="var" path="XERCES"/>
-	<classpathentry kind="output" path="bin"/>
+	<classpathentry path="src" kind="src"/>
+	<classpathentry path="org.eclipse.jdt.launching.JRE_CONTAINER" kind="con"/>
+	<classpathentry path="JBOSS/lib/jboss-system.jar" kind="var"/>
+	<classpathentry sourcepath="/JBOSS_SRC" path="JBOSS/server/default/lib/jboss.jar" kind="var"/>
+	<classpathentry sourcepath="JBOSS_SRC/security/src/main" path="JBOSS/server/default/lib/jbosssx.jar" kind="var"/>
+	<classpathentry sourcepath="/LOG4J_SRC" path="LOG4J" kind="var"/>
+	<classpathentry sourcepath="/WORKSPACE/JFireServerManager/src" path="WORKSPACE/JFireServerManager/dist/JFireServerManager.jar" kind="var"/>
+	<classpathentry sourcepath="WORKSPACE/JFireBase/src" path="WORKSPACE/JFireBase/dist/JFireBase.jar" kind="var"/>
+	<classpathentry sourcepath="/WORKSPACE/NightLabsBase/src" path="WORKSPACE/NightLabsBase/dist/NightLabsBase.jar" kind="var"/>
+	<classpathentry path="JBOSS/server/default/lib/jnpserver.jar" kind="var"/>
+	<classpathentry path="JBOSS/client/jbossall-client.jar" kind="var"/>
+	<classpathentry path="XERCES" kind="var"/>
+	<classpathentry path="JBOSS/server/default/lib/jboss-monitoring.jar" kind="var"/>
+	<classpathentry path="JBOSS/server/default/lib/jbossmq.jar" kind="var"/>
+	<classpathentry path="bin" kind="output"/>
 </classpath>
