Changed the build path entry $APACHE_COMMONS/commons-lang-2.1.jar whose target did not exist to $APACHE_COMMONS/commons-lang.jar which exists (and points to commons-lang-2.0.jar on my machine, so someone should check whether the 2.1 version is required. The project compiles with the 2.0 version, so...)
git-svn-id: https://svn.jfire.org/svn/main/trunk/JFireServerManager@7967 18c61ebf-f106-0410-9e1e-81fb82415b8f

--- a/.classpath
+++ b/.classpath
@@ -6,15 +6,15 @@
 	<classpathentry kind="var" path="JDK_TOOLS"/>
 	<classpathentry kind="var" path="JBOSS/server/default/lib/bcel.jar"/>
 	<classpathentry kind="var" path="LOG4J"/>
-	<classpathentry sourcepath="JPOX_SRC" kind="var" path="JDO2"/>
+	<classpathentry kind="var" path="JDO2" sourcepath="JPOX_SRC"/>
 	<classpathentry kind="var" path="XERCES"/>
 	<classpathentry kind="var" path="XALAN"/>
-	<classpathentry sourcepath="WORKSPACE/NightLabsBase/src" kind="var" path="WORKSPACE/NightLabsBase/dist/NightLabsBase.jar"/>
-	<classpathentry sourcepath="WORKSPACE/NightLabsJDO/src" kind="var" path="WORKSPACE/NightLabsJDO/dist/NightLabsJDO.jar"/>
+	<classpathentry kind="var" path="WORKSPACE/NightLabsBase/dist/NightLabsBase.jar" sourcepath="WORKSPACE/NightLabsBase/src"/>
+	<classpathentry kind="var" path="WORKSPACE/NightLabsJDO/dist/NightLabsJDO.jar" sourcepath="WORKSPACE/NightLabsJDO/src"/>
 	<classpathentry kind="var" path="WORKSPACE/JFireRCLBackend/dist/JFireRCLBackend.jar"/>
 	<classpathentry kind="var" path="APACHE_COMMONS/commons-beanutils.jar"/>
-	<classpathentry sourcepath="JPOX_SRC" kind="var" path="JPOX"/>
+	<classpathentry kind="var" path="JPOX" sourcepath="JPOX_SRC"/>
 	<classpathentry kind="var" path="JBOSS/client/jboss-j2ee.jar"/>
-	<classpathentry kind="var" path="APACHE_COMMONS/commons-lang-2.1.jar"/>
+	<classpathentry kind="var" path="APACHE_COMMONS/commons-lang.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
