added missing '\' at the line's end
git-svn-id: https://svn.jfire.org/svn/main/trunk/org.nightlabs.jfire.base@8067 18c61ebf-f106-0410-9e1e-81fb82415b8f

--- a/plugin.properties
+++ b/plugin.properties
@@ -16,7 +16,7 @@
 
 appName=JFire
 swtAppName=JFire
-aboutText=JFire\n
+aboutText=JFire\n\
 (c) Copyright NightLabs GmbH 2004. All rights reserved.\n\
 Visit http://jfire.org
 
