--- a/plugin.properties
+++ b/plugin.properties
@@ -17,7 +17,7 @@
 appName=JFire
 swtAppName=JFire
 aboutText=JFire\n\
-(c) Copyright NightLabs GmbH 2004. All rights reserved.\n\
+(c) Copyright NightLabs GmbH 2004-2007. All rights reserved.\n\
 Visit http://jfire.org
 
 perspectives.jfireWelcome.name=Welcome
