--- a/plugin.properties
+++ b/plugin.properties
@@ -18,7 +18,9 @@ appName=JFire
 swtAppName=JFire
 aboutText=JFire\n\
 (c) Copyright NightLabs GmbH 2004-2007. All rights reserved.\n\
-Visit http://jfire.org
+Visit http://jfire.org\n\
+\n\
+This product contains third party software. Please consult the website for details.
 
 perspectives.jfireWelcome.name=Welcome
 
