https://www.jfire.org/modules/bugs/view.php?id=199
git-svn-id: https://svn.jfire.org/svn/main/trunk/org.nightlabs.jfire.base@8154 18c61ebf-f106-0410-9e1e-81fb82415b8f

--- a/plugin.properties
+++ b/plugin.properties
@@ -2,82 +2,19 @@
 # Copyright (c) 2007 - www.NightLabs.org
 # **************************************
 
-
-# ****************************************************************************
-#                       Properties for the plugin.xml
-# ****************************************************************************
-
-# not in use?
-#productName=JFire
-# not in use?
-#views.category.name=General
-# not in use?
-#exceptionhandler.throwable.name=Exception Handler for Throwable
-
-appName=JFire
-swtAppName=JFire
+app.name=JFire
 aboutText=JFire\n\
 (c) Copyright NightLabs GmbH 2004-2007. All rights reserved.\n\
 Visit http://jfire.org\n\
 \n\
 This product contains third party software. Please consult the website for details.
 
-perspectives.jfireWelcome.name=Welcome
+org.nightlabs.jfire.base.JFireWelcomePerspective.name=Welcome
 
-login.menu.label=Login
-login.action.label=JFire &Login
-login.action.toolTip=JFire Login
+loginMenu.label=Login
+org.nightlabs.jfire.base.login.action.LoginAction.label=JFire &Login
+org.nightlabs.jfire.base.login.action.LoginAction.toolTip=JFire Login
 
-person.preferences.pages.PersonManagement.name=Person Management
-person.preferences.pages.PersonStructOrder.name=Structure Display Order
-person.preferences.pages.PersonStructOrder.blockstable.col0=Structure blocks
-person.preferences.pages.PersonStructOrder.fieldstable.col0=Structure fields
+org.nightlabs.jfire.base.person.preferences.PersonManagementPreferencePage.name=Person Management
+org.nightlabs.jfire.base.person.preferences.PersonStructOrderPreferencePage.name=Structure Display Order
 
-# ****************************************************************************
-#                       Properties for the Classes
-# ****************************************************************************
-
-
-# **************************************
-# Actions
-# **************************************
-# not used:
-#actions.login.icons.login=icons/Login.24x24.png
-#actions.login.icons.logout=icons/Logout.24x24.png
-actions.login.tooltip.login=JFire Login
-actions.login.tooltip.logout=Logout from JFire
-action.new.unnamed=Unnamed
-
-# **************************************
-# Menus
-# **************************************
-menu.openrecentfiles.text=Recent Files
-
-# **************************************
-# Person Management
-# **************************************
-person.preferences.pages.PersonStructOrder.blockstable.col0=Structure blocks
-person.preferences.pages.PersonStructOrder.fieldstable.col0=Structure fields
-
-person.search.result.table.col0=person
-
-person.edit.wizard.pages.PersonalDataPage.labels.displayName=Display-name
-person.edit.wizard.pages.PersonalDataPage.labels.autoCreateDisplayName=Autocreate display-name from person data
-person.edit.wizard.pages.PersonalDataPage.errormessage.specifyName=A name has to be specified
-person.edit.wizard.pages.PersonalDataPage.errormessage.specifyFirstName=A firstname has to be specified
-
-
-
-# **************************************
-# LanguageWatcher
-# **************************************
-language.watcher.restartdialog.title=Restart for language change
-language.watcher.restartdialog.message.startedWith=JFire was started with language
-language.watcher.restartdialog.message.userPrefered=Your prefered language seems to be
-language.watcher.restartdialog.message.question=Do you want to restart JFire with your prefered language?
-
-# **************************************
-# Update
-# **************************************
-update.message.checkingForUpdates=Checking for updates...
-update.message.pleaseRestart=The application has to be restarted to finish the update. Please press 'OK' to restart.
