Continued work on JFireTradeTestSuite.
git-svn-id: https://svn.jfire.org/svn/main/trunk/org.nightlabs.jfire.base@8311 18c61ebf-f106-0410-9e1e-81fb82415b8f

--- a/build.properties
+++ b/build.properties
@@ -11,7 +11,8 @@ bin.includes = plugin.xml,\
                plugin_de_DE.properties,\
                lib/,\
                plugin_customization.ini,\
-               plugin_de.properties
+               plugin_de.properties,\
+               lib/JFireBaseClientLib.jar
 src.includes = src/,\
                splash.bmp,\
                schema/,\
