--- a/.classpath
+++ b/.classpath
@@ -39,5 +39,6 @@
 	<classpathentry kind="var" path="JPOX" sourcepath="/JPOX_SRC"/>
 	<classpathentry kind="var" path="JPOXENHANCER" sourcepath="/JPOXENHANCER_SRC"/>
 	<classpathentry kind="var" path="WORKSPACE/JFireChezFrancois/dist/JFireChezFrancois.jar"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/JFireIntegrationJBoss"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
