--- a/build.properties
+++ b/build.properties
@@ -11,8 +11,7 @@ bin.includes = plugin.xml,\
                plugin_de_DE.properties,\
                lib/,\
                plugin_customization.ini,\
-               plugin_de.properties,\
-               lib/JFireBaseClientLib.jar
+               plugin_de.properties
 src.includes = src/,\
                splash.bmp,\
                schema/,\
