--- a/build-nightlabs.properties
+++ b/build-nightlabs.properties
@@ -8,4 +8,4 @@ j2ee.deploy.enable=true
 
 j2ee.deploy.subdir=JFire.last/
 j2ee.ear=JFireBase.ear
-j2ee.deployear.includes=JFireBaseClientLib-clrepository.xml
+j2ee.deployear.includes=JFireBaseClientLib.jar,JFireBaseClientLib-clrepository.xml
