added PropertySet/Person TestCase
git-svn-id: https://svn.jfire.org/svn/main/trunk/JFireTestSuite@8553 18c61ebf-f106-0410-9e1e-81fb82415b8f

--- a/.classpath
+++ b/.classpath
@@ -41,5 +41,6 @@
 	<classpathentry kind="var" path="WORKSPACE/JFireChezFrancois/dist/JFireChezFrancois.jar"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/JFireIntegrationJBoss"/>
 	<classpathentry kind="var" path="APACHE_COMMONS/commons-lang.jar"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/JFireBaseDAO"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
