added extension-point for QuickSearchEntrys (works now with QuickSearchEntryFactories)
git-svn-id: https://svn.jfire.org/svn/main/trunk/org.nightlabs.jfire.base@8672 18c61ebf-f106-0410-9e1e-81fb82415b8f

--- a/plugin.xml
+++ b/plugin.xml
@@ -48,6 +48,7 @@
 	   schema="schema/propStructField.exsd"
 	/>
    <extension-point id="overview" name="overview" schema="schema/overview.exsd"/>
+   <extension-point id="quickSearchEntry" name="quickSearchEntry" schema="schema/quicksearchentry.exsd"/>
 	
 	
    <!-- Extensions -->	
