Incomplete - # 170: Update mechanism for the Eclipse Client https://www.jfire.org/modules/bugs/view.php?id=170
fixed Feature parsing

git-svn-id: https://svn.jfire.org/svn/main/trunk/org.nightlabs.jfire.base@8683 18c61ebf-f106-0410-9e1e-81fb82415b8f

--- a/build.properties
+++ b/build.properties
@@ -8,7 +8,7 @@ bin.includes = plugin.xml,\
                splash.bmp,\
                LICENSE.txt,\
                META-INF/,\
-               plugin_de_DE.properties,\
+               plugin_de.properties,\
                lib/,\
                plugin_customization.ini,\
                plugin_de.properties
@@ -26,7 +26,6 @@ src.includes = src/,\
                LICENSE.txt,\
                .project,\
                .classpath,\
-               plugin_de_DE.properties,\
                plugin_de.properties,\
                plugin_customization.ini,\
                build-nightlabs-compile.pre.xml
