--- a/.classpath
+++ b/.classpath
@@ -18,27 +18,27 @@
 	<classpathentry kind="var" path="JBOSS/server/default/lib/jpl-pattern.jar"/>
 	<classpathentry kind="var" path="JBOSS/server/default/lib/jpl-util.jar"/>
 	<classpathentry kind="var" path="JBOSS/server/default/lib/jbosssx.jar" sourcepath="JBOSS_SRC/security/src/main"/>
-	<classpathentry kind="var" path="WORKSPACE/JFireBase/dist/JFireBase.jar" sourcepath="/WORKSPACE/JFireBase/src"/>
-	<classpathentry kind="var" path="WORKSPACE/JFireBaseBean/dist/JFireBaseBean.jar" sourcepath="/WORKSPACE/JFireBaseBean/src"/>
-	<classpathentry kind="var" path="WORKSPACE/NightLabsBase/dist/NightLabsBase.jar" sourcepath="/WORKSPACE/NightLabsBase/src"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/JFireBase"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/JFireBaseBean"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/NightLabsBase"/>
 	<classpathentry kind="var" path="LOG4J"/>
-	<classpathentry kind="var" path="WORKSPACE/NightLabsJDO/dist/NightLabsJDO.jar" sourcepath="WORKSPACE/NightLabsJDO/src"/>
-	<classpathentry kind="var" path="WORKSPACE/JFireTrade/dist/JFireTrade.jar" sourcepath="/WORKSPACE/JFireTrade"/>
-	<classpathentry kind="var" path="WORKSPACE/JFireSimpleTrade/dist/JFireSimpleTrade.jar" sourcepath="/WORKSPACE/JFireSimpleTrade"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/NightLabsJDO"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/JFireTrade"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/JFireSimpleTrade"/>
 	<classpathentry kind="var" path="JDO2" sourcepath="/JDO2_SRC"/>
-	<classpathentry kind="var" path="WORKSPACE/JFireJbpm/dist/JFireJbpm.jar"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/JFireJbpm"/>
 	<classpathentry kind="var" path="WORKSPACE/JFireJbpm/lib/jbpm/jbpm-3.1.4.jar"/>
-	<classpathentry kind="var" path="WORKSPACE/JFireDynamicTrade/dist/JFireDynamicTrade.jar"/>
-	<classpathentry kind="var" path="WORKSPACE/JFireVoucher/dist/JFireVoucher.jar" sourcepath="/WORKSPACE/JFireVoucher/src"/>
-	<classpathentry kind="var" path="WORKSPACE/JFireReporting/dist/JFireReporting.jar" sourcepath="/WORKSPACE/JFireReporting"/>
-	<classpathentry kind="var" path="WORKSPACE/JFireReportingTrade/dist/JFireReportingTrade.jar"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/JFireDynamicTrade"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/JFireVoucher"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/JFireReporting"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/JFireReportingTrade"/>
 	<classpathentry kind="lib" path="dist/lib/junit-4.3.1.jar" sourcepath="dist/lib/junit-4.3.1-src.jar"/>
 	<classpathentry kind="var" path="JBOSS/server/default/lib/mail.jar"/>
-	<classpathentry kind="var" path="WORKSPACE/JFireBaseClientLib/dist/JFireBaseClientLib.jar" sourcepath="/WORKSPACE/JFireBaseClientLib/src"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/JFireBaseClientLib"/>
 	<classpathentry kind="var" path="JBOSS/server/default/lib/activation.jar"/>
 	<classpathentry kind="var" path="JPOX" sourcepath="/JPOX_SRC"/>
 	<classpathentry kind="var" path="JPOXENHANCER" sourcepath="/JPOXENHANCER_SRC"/>
-	<classpathentry kind="var" path="WORKSPACE/JFireChezFrancois/dist/JFireChezFrancois.jar"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/JFireChezFrancois"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/JFireIntegrationJBoss"/>
 	<classpathentry kind="var" path="APACHE_COMMONS/commons-lang.jar"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/JFireBaseDAO"/>
