--- a/.classpath
+++ b/.classpath
@@ -8,9 +8,9 @@
 	<classpathentry kind="var" path="JDK_TOOLS"/>
 	<classpathentry kind="var" path="JBOSS/server/default/lib/jboss.jar"/>
 	<classpathentry kind="var" path="LOG4J"/>
-	<classpathentry kind="var" path="WORKSPACE/NightLabsBase/dist/NightLabsBase.jar"/>
-	<classpathentry kind="var" path="WORKSPACE/NightLabsJDO/dist/NightLabsJDO.jar"/>
-	<classpathentry kind="var" path="WORKSPACE/JFireBasePublicBean/dist/JFireBasePublicBean.jar" sourcepath="/WORKSPACE/JFireBasePublicBean/src"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/NightLabsBase"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/NightLabsJDO"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/JFireBasePublicBean"/>
 	<classpathentry kind="var" path="JBOSS/client/jboss-j2ee.jar"/>
 	<classpathentry kind="var" path="JDO2" sourcepath="/JPOX_SRC"/>
 	<classpathentry kind="var" path="JUNIT_HOME/junit.jar"/>
