--- a/build-nightlabs.properties
+++ b/build-nightlabs.properties
@@ -5,4 +5,6 @@ j2ee.jpoxenhance.enable=false
 j2ee.xdoclet.jdodoclet.enable=false
 j2ee.xdoclet.ejbdoclet.enable=false
 
+j2ee.deploysubdir.includes=JFire-AsyncInvokeQueue-JBoss-service.xml
+
 j2ee.deploy.subdir=JFire.last/
