- https://www.jfire.org/modules/bugs/view.php?id=23 - https://www.jfire.org/modules/bugs/view.php?id=152 - https://www.jfire.org/modules/bugs/view.php?id=364
git-svn-id: https://svn.jfire.org/svn/main/trunk/JFireBaseBean@9095 18c61ebf-f106-0410-9e1e-81fb82415b8f

--- a/.classpath
+++ b/.classpath
@@ -12,7 +12,7 @@
 	<classpathentry combineaccessrules="false" kind="src" path="/NightLabsJDO"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/JFireBasePublicBean"/>
 	<classpathentry kind="var" path="JBOSS/client/jboss-j2ee.jar"/>
-	<classpathentry kind="var" path="JDO2" sourcepath="/JPOX_SRC"/>
+	<classpathentry kind="var" path="JDO2" sourcepath="/JDO2_SRC"/>
 	<classpathentry kind="var" path="JUNIT_HOME/junit.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
