- Updated build-nightlabs.xml in server projects to use ASM instead of BCEL for bytecode enhancing - Updated .classpath in server projects to require ASM variable
git-svn-id: https://svn.jfire.org/svn/main/trunk/JFireTestSuite@9114 18c61ebf-f106-0410-9e1e-81fb82415b8f

--- a/.classpath
+++ b/.classpath
@@ -43,4 +43,5 @@
 	<classpathentry kind="var" path="APACHE_COMMONS/commons-lang.jar"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/JFireBaseDAO"/>
 	<classpathentry kind="output" path="bin"/>
+  <classpathentry kind="var" path="ASM"/>
 </classpath>
