* refactored CascadedAuthentication to not anymore spawn a new thread, but directly change identities on the same thread * added a new action to re-trigger the registration to the root-organisation * refactored the datastore-init-system to use separate transactions for each init * refactored the testsuite to execute every test in a separate transaction
git-svn-id: https://svn.jfire.org/svn/main/trunk/JFireIntegrationJBoss@9373 18c61ebf-f106-0410-9e1e-81fb82415b8f

--- a/.classpath
+++ b/.classpath
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry path="src" kind="src"/>
-	<classpathentry path="org.eclipse.jdt.launching.JRE_CONTAINER" kind="con"/>
-	<classpathentry sourcepath="/LOG4J_SRC" path="LOG4J" kind="var"/>
+	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="var" path="LOG4J" sourcepath="/LOG4J_SRC"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/JFireServerManager"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/JFireBase"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/NightLabsBase"/>
-	<classpathentry path="XERCES" kind="var"/>
-	<classpathentry sourcepath="JBOSS_SRC/security/src/main" path="JBOSS/server/default/lib/jbosssx.jar" kind="var"/>
-	<classpathentry path="JBOSS/client/jbossall-client.jar" kind="var"/>
-	<classpathentry path="bin" kind="output"/>
+	<classpathentry kind="var" path="XERCES"/>
+	<classpathentry kind="var" path="JBOSS/server/default/lib/jbosssx.jar" sourcepath="JBOSS_SRC/security/src/main"/>
+	<classpathentry kind="var" path="JBOSS/client/jbossall-client.jar"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/JFireBaseClientLib"/>
+	<classpathentry kind="output" path="bin"/>
 </classpath>
