--- a/.classpath
+++ b/.classpath
@@ -13,7 +13,7 @@
 	<classpathentry combineaccessrules="false" kind="src" path="/JFireBasePublicBean"/>
 	<classpathentry kind="var" path="JBOSS/client/jboss-j2ee.jar"/>
 	<classpathentry kind="var" path="JDO2" sourcepath="/JDO2_SRC"/>
-	<classpathentry kind="var" path="JUNIT_HOME/junit.jar"/>
+	<classpathentry kind="var" path="JUNIT_HOME/junit.jar" sourcepath="/WORKSPACE/JFireTestSuite/dist/lib/junit-4.3.1-src.jar"/>
 	<classpathentry kind="var" path="APACHE_COMMONS/commons-lang.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
