--- a/.classpath
+++ b/.classpath
@@ -14,5 +14,6 @@
 	<classpathentry kind="var" path="JDO2" sourcepath="/JDO2_SRC"/>
 	<classpathentry kind="var" path="JUNIT_HOME/junit.jar" sourcepath="/WORKSPACE/JFireTestSuite/dist/lib/junit-4.3.1-src.jar"/>
 	<classpathentry kind="var" path="APACHE_COMMONS/commons-lang.jar"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/JFireLog4j"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
