aaargh Subclipse seems to have missed some changes to the classpaths!!!
git-svn-id: https://svn.jfire.org/svn/main/trunk/JFireBaseBean@10183 18c61ebf-f106-0410-9e1e-81fb82415b8f

--- a/.classpath
+++ b/.classpath
@@ -15,5 +15,7 @@
 	<classpathentry kind="var" path="APACHE_COMMONS/commons-lang.jar"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/JFireLog4j"/>
 	<classpathentry kind="var" path="WORKSPACE/NightLabsJDO/dist/NightLabsJDO.jar" sourcepath="WORKSPACE/NightLabsJDO/src"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/NightLabsQuery"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/NightLabsQueryJDO"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
